# veta

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/: main.cc
